Fixed the articles and reviews showing up correctly. Changed some colors so links are visible and added some test data

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -8,7 +8,7 @@
     border: 3px inset #ffffff;
     border-radius: 8px;
     
-    background-image: url("testimg.jpg");
+    background-image: url("testimg1.jpg");
     background-repeat:no-repeat;
     background-position:center;
     background-size: cover;
@@ -72,7 +72,7 @@
     height: 30%;
 }
 body {
-    background: #062362;
+    background: #006F98;
     font-family: Verdana;
     font-size: 12px;
     color: #ffffff;
